--- a/webapp/i18n/i18n_de.properties
+++ b/webapp/i18n/i18n_de.properties
@@ -162,3 +162,8 @@ vb1_threshold4_color=Farbe Schwellenwert4
 link1=Zum SAP-Blog des Autors
 link2=Twitter#UI5Top5
 link3=Gewonnen!
+
+autoreload=Auto-Reload wird durchgeführt!
+reloadbutton=Auto-Reload An/Aus
+reload=Daten neu laden
+reloaded=Reload wird durchgeführt!
