--- a/webapp/i18n/i18n_en.properties
+++ b/webapp/i18n/i18n_en.properties
@@ -164,3 +164,8 @@ vb1_threshold4_color=Color Threshold4
 link1=Visit authors sap blog
 link2=Twitter#UI5Top5
 link3=We have won!
+
+autoreload=Auto-Reload will start!
+reloadbutton=Auto-Reload on/off
+reload=Reload data
+reloaded=Data reloaded, or start reload for init data!
